--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,24 +1,40 @@
 pipeline {
-    agent any
+    agent any  // Use any available agent
+    
+    environment {
+        LANG = 'en_US.UTF-8'
+        LC_ALL = 'en_US.UTF-8'
+    }   // this has to be added only if you get an error saying UTF required is 8 but showing in ISO00009
 
     tools {
-        maven 'Maven'
-        jdk 'JDK'
+        maven 'Maven'  // Ensure this matches the name configured in Jenkins
     }
-
     stages {
         stage('Checkout') {
             steps {
-                git 'https://github.com/saniya-gs/mvnweb.git'
+                git branch: 'master', url: 'https://github.com/saniya-gs/mvnweb.git'
             }
         }
 
-        stage('Build WAR') {
+        stage('Build') {
             steps {
-                sh 'mvn clean package'
+                sh 'mvn clean package'  // Run Maven build
             }
         }
 
+     stage('Archive') {
+            steps {
+                archiveArtifacts artifacts: 'target/*.war', fingerprint:true
+            }
+        }
+        stage('Deploy') {
+            steps {
+               sh 'mvn clean package'  
+               sh 'ansible-playbook ansible/playbook.yml -i ansible/hosts.ini'
+            }
+        }
 
+                  
     }
-}
+
+   }
